<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ImageView
            android:id="@id/default_img"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_signe"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@id/choice_sign_back"
            android:layout_width="48.0dip"
            android:layout_height="48.0dip"
            android:paddingTop="13.0dip"
            android:paddingEnd="13.0dip"
            android:paddingBottom="15.0dip"
            android:src="@drawable/back_white"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="27.0"
            android:gravity="bottom|center"
            android:text="@string/chsign_p1_txt"
            android:textColor="@android:color/white"
            android:textSize="23.0sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/choice_sign_back" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="30.0"
            app:layout_constraintBottom_toTopOf="@+id/choice_sign_validate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">


            <androidx.viewpager.widget.ViewPager
                android:id="@+id/view_pager"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@id/choice_sign_prev"
                android:layout_width="@dimen/_36sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:layout_weight="11.0"
                android:adjustViewBounds="true"
                android:src="@drawable/choice_prev"
                app:layout_constraintBottom_toBottomOf="@+id/view_pager"
                app:layout_constraintEnd_toStartOf="@+id/view_pager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/view_pager" />


            <ImageView
                android:id="@id/choice_sign_next"
                android:layout_width="@dimen/_36sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:layout_weight="11.0"
                android:adjustViewBounds="true"
                android:minHeight="30.0dip"
                android:src="@drawable/choice_next"
                app:layout_constraintBottom_toBottomOf="@+id/view_pager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view_pager"
                app:layout_constraintTop_toTopOf="@+id/view_pager" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            android:id="@id/choice_sign_validate"
            android:layout_width="220.0dip"
            android:layout_height="0.0dip"
            android:layout_marginBottom="56dp"
            android:layout_weight="8.0"
            android:background="@drawable/rounded_button_blue"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/choice_sign_go_wims_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@id/choice_sign_validate_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/chsign_p1_cta"
                android:textColor="@android:color/white"
                android:textSize="21.0sp" />

            <ProgressBar
                android:id="@id/choice_sign_validate_progressBar"
                style="?android:progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:visibility="invisible"
                android:layout_margin="7.0dip"
                android:indeterminate="true" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@id/choice_sign_go_wims_layout"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="56dp"
            android:layout_weight="12.0"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@id/choice_sign_go_wims"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/chsign_p1_btn"
                android:textColor="@android:color/white"
                android:textSize="15.5sp" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/choice_sign_go_wims"
                android:layout_alignBottom="@id/choice_sign_go_wims"
                android:layout_marginLeft="2.0dip"
                android:layout_toRightOf="@id/choice_sign_go_wims">

                <ImageView
                    android:layout_width="9.0dip"
                    android:layout_height="9.0dip"
                    android:layout_gravity="center"
                    android:layout_marginTop="1.0dip"
                    android:adjustViewBounds="true"
                    android:src="@drawable/chevron" />
            </FrameLayout>
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>